# modern-software-dev-assignments

./: pyproject.toml
week1/: chain_of_thought.py  k_shot_prompting.py  rag.py  reflexion.py  self_consistency_prompting.py  tool_calling.py
week2/: README.md  tiny_coding_agent.py
week2/app/: config.py  db.py  main.py  schemas.py
week2/app/routers/: action_items.py  notes.py
week2/app/services/: extract.py
week2/frontend/: index.html
week2/tests/: test_extract.py
